# backend

./: .dockerignore  .gitignore  dc  deploy.sh  events-example.json  pyproject.toml  readme.md
docker/: Dockerfile  Dockerfile.prod  Dockerfile.prod.alpine  boot.sh  docker-compose.yml
src/: dev_server.sh  gen_db_schema.sh  main.py
src/apps/main/: admin.py  event_handlers.py  event_parsers.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
src/apps/main/migrations/: 0001_initial.py  0002_auto_20210904_1258.py  0003_auto_20210904_1718.py  0004_achievement_image.py  0005_auto_20210904_1925.py
src/apps/main/static/main/: AssetManifest.json  FontManifest.json  flutter_service_worker.js  index.html  main.dart.js  version.json
src/apps/main/static/main/assets/: NOTICES
src/apps/user/: admin.py  models.py  serializers.py  urls.py  views.py
src/apps/user/migrations/: 0001_initial.py  0002_auto_20210904_1258.py
src/conf/: .env.example  celery_app.py  settings.py  urls.py  wsgi.py
src/utils/: admin.py  middlewares.py  models.py
